--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "cross-env": "7.0.3",
     "express": "^4.18.2",
     "joi": "^17.12.1",
+    "mongoose": "^8.1.1",
     "morgan": "1.10.0",
     "nanoid": "^3.3.4",
     "path": "^0.12.7"
