--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "cors": "2.8.5",
     "cross-env": "7.0.3",
+    "dotenv": "^16.4.1",
     "express": "^4.18.2",
     "joi": "^17.12.1",
     "mongoose": "^8.1.1",
