--- a/package.json
+++ b/package.json
@@ -13,15 +13,18 @@
     "cors": "2.8.5",
     "dotenv": "^16.4.1",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "gravatar": "^1.8.2",
     "jimp": "^0.22.10",
     "joi": "^17.12.1",
     "jsonwebtoken": "^9.0.2",
+    "mailgun.js": "^10.1.0",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.1",
     "morgan": "1.10.0",
     "multer": "^1.4.5-lts.1",
     "nanoid": "^3.3.4",
+    "nodemailer": "^6.9.9",
     "path": "^0.12.7"
   },
   "devDependencies": {
